manifests/app/service-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: joshuamsaechao/service-a:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
