manifests/app/service-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: joshuamsaechao/service-b:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
