manifests/app/service-c-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
        - name: service-c
          image: joshuamsaechao/service-c:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
