manifests/app/service-c-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-c
spec:
  selector:
    app: service-c
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
