manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: local.test
      http:
        paths:
          - path: /a(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
          - path: /b(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-b
                port:
                  number: 80
          - path: /c(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-c
                port:
                  number: 80
